--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-SERVER=https://backend-todo-985l.onrender.com/api/v1
+SERVER=https://backend-todo-985l.onrender.com/api/v1 
+
+
+# SERVER= http://localhost:4000/api/v1
